Changes Some Code

--- a/index.html
+++ b/index.html
@@ -10,47 +10,23 @@
 </head>
 
 <body>
-  <main class="container">
-    <div class="header">
-      <h1>Header</h1>
+  <div class="container">
+    <div class="header">Header</div>
+    <div class="sidebar">Sidebar</div>
+    <div class="navbar">Navbar</div>
+    <div class="article">Article
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam voluptatibus nulla, sunt laudantium,
+        quibusdam alias laborum placeat ea possimus, maxime fugiat cupiditate delectus repellat quae consectetur cum
+        consequatur! Odit, nihil!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias doloremque voluptatibus hic temporibus autem
+        corporis quasi ratione aperiam excepturi voluptatum numquam at incidunt sapiente voluptate, praesentium totam
+        possimus consectetur odit?</p>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi, iste ipsam maiores dolor porro eveniet
+        recusandae aperiam repellat quod! Aut exercitationem mollitia reiciendis alias explicabo quas enim, iste
+        reprehenderit impedit?</p>
     </div>
-    <div class="nav">
-      <h1>Navbar</h1>
-    </div>
-    <div class="article">
-      <h1>Article</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia eligendi asperiores optio sed eos voluptas
-        consequuntur in molestias inventore! Quisquam, quod. Hic ea et dolores, quo, enim voluptas officiis eius minima
-        laudantium eum necessitatibus voluptatibus soluta esse! Architecto, veniam est quis aliquid aliquam soluta quas
-        deserunt expedita facilis et consequuntur vitae illum. Nobis dolore accusantium nihil obcaecati voluptate odit
-        dignissimos earum pariatur omnis qui numquam nulla consequatur eius placeat ad eligendi eveniet laboriosam quam
-        perferendis, exercitationem voluptates id excepturi? Porro nulla quam veritatis accusamus? Atque quasi
-        laboriosam accusantium dolores harum. Temporibus suscipit, dolorem dolorum eveniet ad veniam placeat omnis nisi!
-      </p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia eligendi asperiores optio sed eos voluptas
-        consequuntur in molestias inventore! Quisquam, quod. Hic ea et dolores, quo, enim voluptas officiis eius minima
-        laudantium eum necessitatibus voluptatibus soluta esse! Architecto, veniam est quis aliquid aliquam soluta quas
-        deserunt expedita facilis et consequuntur vitae illum. Nobis dolore accusantium nihil obcaecati voluptate odit
-        dignissimos earum pariatur omnis qui numquam nulla consequatur eius placeat ad eligendi eveniet laboriosam quam
-        perferendis, exercitationem voluptates id excepturi? Porro nulla quam veritatis accusamus? Atque quasi
-        laboriosam accusantium dolores harum. Temporibus suscipit, dolorem dolorum eveniet ad veniam placeat omnis nisi!
-      </p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia eligendi asperiores optio sed eos voluptas
-        consequuntur in molestias inventore! Quisquam, quod. Hic ea et dolores, quo, enim voluptas officiis eius minima
-        laudantium eum necessitatibus voluptatibus soluta esse! Architecto, veniam est quis aliquid aliquam soluta quas
-        deserunt expedita facilis et consequuntur vitae illum. Nobis dolore accusantium nihil obcaecati voluptate odit
-        dignissimos earum pariatur omnis qui numquam nulla consequatur eius placeat ad eligendi eveniet laboriosam quam
-        perferendis, exercitationem voluptates id excepturi? Porro nulla quam veritatis accusamus? Atque quasi
-        laboriosam accusantium dolores harum. Temporibus suscipit, dolorem dolorum eveniet ad veniam placeat omnis nisi!
-      </p>
-    </div>
-    <div class="sidebar">
-      <h1>Sidebar</h1>
-    </div>
-    <div class="footer">
-      <h1>Footer</h1>
-    </div>
-  </main>
+    <div class="footer">Footer</div>
+  </div>
 </body>
 
 </html>
